--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ numpy==1.19.1
 opencv-contrib-python==4.3.0.36
 opencv-python==4.3.0.36
 Pillow==7.2.0
+pipe==1.6.0
 pylint==2.5.3
 six==1.15.0
 toml==0.10.1
