--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,31 +2,47 @@ version: '2'
 services:
   zookeeper:
     image: wurstmeister/zookeeper:3.4.6
+    container_name: zookeeper
     ports:
      - "2181:2181"
+    networks:
+      - test 
   
   kafka:
     image: wurstmeister/kafka
+    container_name: kafka
     ports:
      - "9092:9092"
+     - "29094:29094"
     expose:
      - "9093"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9093,OUTSIDE://localhost:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
-      KAFKA_LISTENERS: INSIDE://0.0.0.0:9093,OUTSIDE://0.0.0.0:9092
-      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+      KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENERS: LISTENER_BOB://kafka:29092,LISTENER_FRED://kafka:9092,LISTENER_ALICE://kafka:29094
+      KAFKA_ADVERTISED_LISTENERS: LISTENER_BOB://kafka:29092,LISTENER_FRED://localhost:9092,LISTENER_ALICE://never-gonna-give-you-up:29094
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_BOB:PLAINTEXT,LISTENER_FRED:PLAINTEXT,LISTENER_ALICE:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_BOB
     volumes:
      - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - test 
 
-  video-streamer:
+  streamer:
     build: .
+    container_name: streamer
     links:
-     - kafka
+     - kafka:kafka
     depends_on:
      - kafka      
     volumes:
      -  /var/run/docker.sock:/var/run/docker.sock 
      -  /home/manoj/Videos/Webcam/testvideo.webm:/usr/src/app/testvideo.webm
+     -  /home/manoj/Videos/YouTube/Tipre.webm:/usr/src/app/Tipre.webm
+    networks:
+      - test 
+
+networks:
+  test:
+    driver: bridge
   
