updates to code to make docker work

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
      -  /var/run/docker.sock:/var/run/docker.sock 
      -  /home/manoj/Videos/Webcam/testvideo.webm:/usr/src/app/testvideo.webm
      -  /home/manoj/Videos/YouTube/Tipre.webm:/usr/src/app/Tipre.webm
+     - .:/usr/src/app
     networks:
       - test 
 
