--- a/requirements_docker.txt
+++ b/requirements_docker.txt
@@ -1,3 +1,6 @@
-face-recognition==1.3.0
-face-recognition-models==0.3.0
 kafka-python==2.0.1
+dlib
+face_recognition
+face-recognition-models
+opencv-python
+opencv-contrib-python
