updating docker setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
      - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - test 
+    depends_on:
+     - zookeeper    
 
   streamer:
     build:
@@ -41,7 +43,7 @@ services:
      -  /var/run/docker.sock:/var/run/docker.sock 
      -  /home/manoj/Videos/Webcam/testvideo.webm:/usr/src/app/testvideo.webm
      -  /home/manoj/Videos/YouTube/Tipre.webm:/usr/src/app/Tipre.webm
-     - .:/usr/src/app/Video-Analytics
+     - .:/usr/src/app/Video-Analytics  #todo: need to get rid of this
     networks:
       - test 
 
