--- a/Dockerfile-Streamer
+++ b/Dockerfile-Streamer
@@ -7,5 +7,8 @@ ADD requirements_handcrafted.txt /usr/src/app/requirements_handcrafted.txt
 RUN cd /usr/src/app \
     && pip3 install -r requirements_handcrafted.txt
 
+RUN git clone https://github.com/manojphatak-hcl/Video-Analytics.git
+        
+        
 CMD tail -f /dev/null
 
