--- a/Dockerfile-Streamer
+++ b/Dockerfile-Streamer
@@ -8,5 +8,9 @@ RUN cd /usr/src/app \
     && pip3 install -r requirements_handcrafted.txt \
     && git clone https://github.com/manojphatak-hcl/Video-Analytics.git Video-Analytics
 
+RUN mkdir /tmp/VideoAnalytics \
+    && mkdir /tmp/VideoAnalytics/out \
+    && mkdir /tmp/VideoAnalytics/faces 
+
 CMD tail -f /dev/null
 
