--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '2.1'
 services:
   zookeeper:
     image: wurstmeister/zookeeper:3.4.6
@@ -41,18 +41,21 @@ services:
      - kafka      
     volumes:
      -  /var/run/docker.sock:/var/run/docker.sock 
-     -  /home/manoj/Videos/Webcam/testvideo.webm:/usr/src/app/testvideo.webm
-     -  /home/manoj/Videos/YouTube/Tipre.webm:/usr/src/app/Tipre.webm
-
      - .:/usr/src/app/Video-Analytics-local  #this is for testing the code before commit
+     - /tmp/VideoAnalytics/out:/tmp/VideoAnalytics/out
+     - /tmp/VideoAnalytics/faces:/tmp/VideoAnalytics/faces
           
     environment: 
      - RUN_TESTS_INSIDE_CONTAINER=true  
     networks:
-      - test 
+      - test
+    working_dir: /usr/src/app/Video-Analytics
+      
+    #healthcheck:
+    #  test: ["CMD-SHELL","python3", "tests.py" ]
+    #  interval: 1h
+    #  timeout: 5m  
     
-    
-
 networks:
   test:
     driver: bridge
