--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2.1'
+version: '3'
 services:
   zookeeper:
     image: wurstmeister/zookeeper:3.4.6
@@ -50,14 +50,9 @@ services:
       - test
     working_dir: /usr/src/app/Video-Analytics
     command: >
-        sh -c "git checkout refactoring-docker &&
-               git pull &&
+        sh -c "git pull origin dynamic &&
+               git checkout dynamic &&
                tail -f /dev/null"
-      
-    #healthcheck:
-    #  test: ["CMD-SHELL","python3", "tests.py" ]
-    #  interval: 1h
-    #  timeout: 5m  
     
 networks:
   test:
