separated docker-compose for 'kafka' and 'streamer' spplication

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,10 @@
 version: '3'
 services:
-  zookeeper:
-    image: wurstmeister/zookeeper:3.4.6
-    container_name: zookeeper
-    ports:
-     - "2181:2181"
-    networks:
-      - test 
-  
-  kafka:
-    image: wurstmeister/kafka
-    container_name: kafka
-    ports:
-     - "9092:9092"
-    expose:
-     - "29092"
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENERS: INSIDE://0.0.0.0:29092,OUTSIDE://0.0.0.0:9092
-      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:29092,OUTSIDE://localhost:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
-    volumes:
-     - /var/run/docker.sock:/var/run/docker.sock
-    networks:
-      - test 
-    depends_on:
-     - zookeeper    
-
   streamer:
     build:
       context: .
       dockerfile: Dockerfile-Streamer
     container_name: streamer
-    links:
-     - kafka:kafka
-    depends_on:
-     - kafka      
     volumes:
      -  /var/run/docker.sock:/var/run/docker.sock 
      - .:/usr/src/app/Video-Analytics-local  #this is for testing the code before commit
@@ -46,8 +13,6 @@ services:
           
     environment: 
      - RUN_TESTS_INSIDE_CONTAINER=true  
-    networks:
-      - test
     working_dir: /usr/src/app/Video-Analytics
     command: >
         sh -c "git pull origin dynamic &&
@@ -55,6 +20,7 @@ services:
                tail -f /dev/null"
     
 networks:
-  test:
-    driver: bridge
+  default:
+    external:
+      name: kafka-network
   
