--- a/logging.yml
+++ b/logging.yml
@@ -15,7 +15,7 @@ handlers:
         class: logging.handlers.RotatingFileHandler
         level: INFO
         formatter: simple
-        filename: info.log
+        filename: /tmp/VideoAnalytics/logs/info.log  #todo: avoid repetation. Make env variable
         maxBytes: 10485760 # 10MB
         backupCount: 20
         encoding: utf8
@@ -24,7 +24,7 @@ handlers:
         class: logging.handlers.RotatingFileHandler
         level: ERROR
         formatter: simple
-        filename: errors.log
+        filename: /tmp/VideoAnalytics/logs/errors.log
         maxBytes: 10485760 # 10MB
         backupCount: 20
         encoding: utf8
@@ -33,18 +33,18 @@ handlers:
         class: logging.handlers.RotatingFileHandler
         level: DEBUG
         formatter: simple
-        filename: debug.log
+        filename: /tmp/VideoAnalytics/logs/debug.log
         maxBytes: 10485760 # 10MB
         backupCount: 20
         encoding: utf8    
 
 loggers:
-    my_module:
+    video_analytics:
         level: DEBUG
         handlers: [console, info_file_handler, error_file_handler, debug_file_handler]
         propagate: no
 
 root:
-    level: ERROR
+    level: WARNING
     handlers: [console, info_file_handler, error_file_handler, debug_file_handler]
     propagate: no
