--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==7.1.2
 dlib==19.20.99
 face-recognition==1.3.0
 face-recognition-models==0.3.0
+future-fstrings==1.2.0
 isort==4.3.21
 kafka-python==2.0.1
 lazy-object-proxy==1.4.3
@@ -16,6 +17,7 @@ pipe==1.6.0
 pycodestyle==2.6.0
 pylint==2.5.3
 pytube3==9.6.4
+PyYAML==5.3.1
 rope==0.17.0
 six==1.15.0
 toml==0.10.1
