added container name to docker-compose

--- a/generator/docker-compose.yml
+++ b/generator/docker-compose.yml
@@ -4,6 +4,7 @@ services:
 
   generator:
     build: .
+    container_name: generator
     environment:
       KAFKA_BROKER_URL: kafka:29092
       TRANSACTIONS_TOPIC: queueing.transactions
