--- a/generator/docker-compose.yml
+++ b/generator/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       TRANSACTIONS_TOPIC: queueing.transactions
       TRANSACTIONS_PER_SECOND: 1000
 
+    volumes:
+     - ..:/usr/app/sandbox  #this is for testing the code before commit  
   
 
 networks:
