--- a/generator/docker-compose.yml
+++ b/generator/docker-compose.yml
@@ -14,9 +14,23 @@ services:
     volumes:
      - ..:/usr/app/sandbox  #this is for testing the code before commit
      - /tmp/VideoAnalytics/testdata:/usr/app/movies
-    working_dir: /usr/app/sandbox/movie-feeder
+    working_dir: /usr/app/sandbox/generator
     entrypoint: ["python3", "movie_streamer.py"]
   
+
+  face-detector:
+    build: .
+    container_name: face-detector
+    environment:
+      KAFKA_BROKER_URL: kafka:29092
+      INPUT_TOPIC: queueing.raw-frames
+      OUTPUT_TOPIC: transactions.faces
+    volumes:
+      - ..:/usr/app/sandbox  #this is for testing the code before commit  
+    working_dir: /usr/app/sandbox/generator
+    entrypoint: ["python3", "face_detector.py"]  
+
+
 
 networks:
   default:
