--- a/generator/docker-compose.yml
+++ b/generator/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       OUTPUT_TOPIC: transactions.faces
     volumes:
       - ..:/usr/app/sandbox  #this is for testing the code before commit  
+      - /tmp/todelete:/tmp  # transient output. #TODO: to be removed
     working_dir: /usr/app/sandbox/generator
     entrypoint: ["python3", "face_detector.py"]  
 
