new kafka consumer for writing data to file-system

--- a/generator/docker-compose.yml
+++ b/generator/docker-compose.yml
@@ -32,6 +32,21 @@ services:
     entrypoint: ["python3", "face_detector.py"]  
 
 
+  filesystem-consumer:
+    build: .
+    container_name: filesystem-consumer
+    environment:
+      KAFKA_BROKER_URL: kafka:29092
+      INPUT_TOPIC: transactions.faces
+      OUTPUT_FILE_LOCATION: /tmp
+    volumes:
+      - ..:/usr/app/sandbox  #this is for testing the code before commit  
+      - /tmp/filesystem-consumer/todelete:/tmp  # transient output. #TODO: to be removed
+    working_dir: /usr/app/sandbox/generator
+    entrypoint: ["python3", "filesystem_consumer.py"]  
+
+
+
 
 networks:
   default:
