--- a/docker-compose-kafka.yml
+++ b/docker-compose-kafka.yml
@@ -22,6 +22,7 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
     volumes:
      - /var/run/docker.sock:/var/run/docker.sock
+     - ./generator/remove_all_topics.sh:/remove_all_topics.sh
     depends_on:
      - zookeeper    
 
