--- a/cctv_surveillance/docker-compose.yml
+++ b/cctv_surveillance/docker-compose.yml
@@ -43,8 +43,8 @@ services:
       INPUT_TOPIC: transactions.motion
       OUTPUT_TOPIC: transactions.faces
     volumes:
-      - ..:/usr/app/sandbox  #this is for testing the code before commit  
-      - ${VIDEO_ANALYTICS_DATA}/transient-data:/tmp  # transient output. #TODO: to be removed
+      - ..:/usr/app/sandbox  
+      - ${VIDEO_ANALYTICS_DATA}/transient-data:/tmp  
     working_dir: /usr/app/sandbox/cctv_surveillance
     entrypoint: ["python3", "face_detector.py"]  
 
@@ -59,7 +59,7 @@ services:
       FACE_DATABASE: /tmp/faces
       FACE_MATCH_TOL: 0.6
     volumes:
-      - ..:/usr/app/sandbox  #this is for testing the code before commit    
+      - ..:/usr/app/sandbox  
       - ${VIDEO_ANALYTICS_DATA}/known-faces:/tmp/faces  
     working_dir: /usr/app/sandbox/cctv_surveillance
     entrypoint: ["python3", "face_matcher.py"]    
@@ -73,7 +73,7 @@ services:
       INPUT_TOPIC: transactions.matched-faces
       OUTPUT_FILE_LOCATION: /tmp
     volumes:
-      - ..:/usr/app/sandbox  #this is for testing the code before commit  
+      - ..:/usr/app/sandbox  
       - ${VIDEO_ANALYTICS_DATA}/output:/tmp  
     working_dir: /usr/app/sandbox/cctv_surveillance
     entrypoint: ["python3", "filesystem_consumer.py"]  
