cleaning up dockerfile

--- a/cctv_surveillance/.env
+++ b/cctv_surveillance/.env
@@ -1,2 +1,7 @@
+
+DOCK_SANDBOX=/usr/app/sandbox       # dynamic code shared from host to container
+DOCKER_HOME=/usr/app                # base or home directory of the container
+
+
+# !!! Modify following variable to suit your computing environment !!!
 HOST_FOLDER=/tmp/VideoAnalytics/
-DOCKER_SRC=/usr/app/sandbox
