--- a/cctv_surveillance/docker-compose.yml
+++ b/cctv_surveillance/docker-compose.yml
@@ -11,12 +11,12 @@ services:
       KAFKA_BROKER_URL: kafka:29092
       TRANSACTIONS_TOPIC: cctv.raw-frames
       FRAME_CAPTURE_PERIOD: 1                           # Capture frame at every 'n' seconds
-      MOVIE_FILES_SOURCE: "/usr/app/movies"
+      MOVIE_FILES_SOURCE: $DOCKER_HOME/movies
 
     volumes:
-     - ..:${DOCKER_SRC}                              # this is for testing the code before commit
-     - ${HOST_FOLDER}/movies:/usr/app/movies
-    working_dir: ${DOCKER_SRC}/cctv_surveillance
+     - ..:${DOCK_SANDBOX}                              # this is for testing the code before commit
+     - ${HOST_FOLDER}/movies:$DOCKER_HOME/movies
+    working_dir: ${DOCK_SANDBOX}/cctv_surveillance
     entrypoint: ["python3", "movie_streamer.py"]
   
 
@@ -28,10 +28,9 @@ services:
       INPUT_TOPIC: cctv.raw-frames
       OUTPUT_TOPIC: cctv.motion-detected
     volumes:
-      - ..:${DOCKER_SRC}  
-      - ${HOST_FOLDER}/transient-data:/usr/app/temp
-      - ${HOST_FOLDER}/output:/usr/app/out
-    working_dir: ${DOCKER_SRC}/cctv_surveillance
+      - ../:${DOCK_SANDBOX}  
+      - ${HOST_FOLDER}/output:$DOCKER_HOME/out
+    working_dir: ${DOCK_SANDBOX}/cctv_surveillance
     entrypoint: ["python3", "motion_detector.py"]  
 
 
@@ -43,9 +42,8 @@ services:
       INPUT_TOPIC: cctv.motion-detected
       OUTPUT_TOPIC: cctv.faces-detected
     volumes:
-      - ..:${DOCKER_SRC}  
-      - ${HOST_FOLDER}/transient-data:/tmp  
-    working_dir: ${DOCKER_SRC}/cctv_surveillance
+      - ../:${DOCK_SANDBOX}  
+    working_dir: ${DOCK_SANDBOX}/cctv_surveillance
     entrypoint: ["python3", "face_detector.py"]  
 
 
@@ -56,12 +54,12 @@ services:
       KAFKA_BROKER_URL: kafka:29092
       INPUT_TOPIC: cctv.faces-detected
       OUTPUT_TOPIC: transactions.matched-faces
-      FACE_DATABASE: /tmp/faces
+      FACE_DATABASE: $DOCKER_HOME/faces
       FACE_MATCH_TOL: 0.6
     volumes:
-      - ..:${DOCKER_SRC}  
-      - ${HOST_FOLDER}/known-faces:/tmp/faces  
-    working_dir: ${DOCKER_SRC}/cctv_surveillance
+      - ../:${DOCK_SANDBOX}  
+      - ${HOST_FOLDER}/known-faces:$DOCKER_HOME/faces  
+    working_dir: ${DOCK_SANDBOX}/cctv_surveillance
     entrypoint: ["python3", "face_matcher.py"]    
 
 
@@ -73,9 +71,9 @@ services:
       INPUT_TOPIC: transactions.matched-faces
       OUTPUT_FILE_LOCATION: /tmp
     volumes:
-      - ..:${DOCKER_SRC}  
+      - ../:${DOCK_SANDBOX}  
       - ${HOST_FOLDER}/output:/tmp  
-    working_dir: ${DOCKER_SRC}/cctv_surveillance
+    working_dir: ${DOCK_SANDBOX}/cctv_surveillance
     entrypoint: ["python3", "filesystem_consumer.py"]  
     
 
