added switch to use sandbox or checkout folder

--- a/cctv_surveillance/.env
+++ b/cctv_surveillance/.env
@@ -1,7 +1,9 @@
 
-DOCK_SANDBOX=/usr/app/sandbox       # dynamic code shared from host to container
 DOCKER_HOME=/usr/app                # base or home directory of the container
+DOCKER_SANDBOX=/usr/app/sandbox       # dynamic code shared from host to container
+DOCKER_CHECKOUT=/usr/app/Video-Analytics
 
 
 # !!! Modify following variable to suit your computing environment !!!
 HOST_FOLDER=/tmp/VideoAnalytics/
+DOCKER_CODE=/usr/app/sandbox            # assign it to either DOCKER_SANDBOX or DOCKER_CHECKOUT above
