--- a/cctv_surveillance/docker-compose.yml
+++ b/cctv_surveillance/docker-compose.yml
@@ -14,9 +14,9 @@ services:
       MOVIE_FILES_SOURCE: $DOCKER_HOME/movies
 
     volumes:
-     - ..:${DOCK_SANDBOX}                              # this is for testing the code before commit
+     - ..:${DOCKER_CODE}                              # this is for testing the code before commit
      - ${HOST_FOLDER}/movies:$DOCKER_HOME/movies
-    working_dir: ${DOCK_SANDBOX}/cctv_surveillance
+    working_dir: ${DOCKER_CODE}/cctv_surveillance
     entrypoint: ["python3", "movie_streamer.py"]
   
 
@@ -28,9 +28,9 @@ services:
       INPUT_TOPIC: cctv.raw-frames
       OUTPUT_TOPIC: cctv.motion-detected
     volumes:
-      - ../:${DOCK_SANDBOX}  
+      - ../:${DOCKER_CODE}  
       - ${HOST_FOLDER}/output:$DOCKER_HOME/out
-    working_dir: ${DOCK_SANDBOX}/cctv_surveillance
+    working_dir: ${DOCKER_CODE}/cctv_surveillance
     entrypoint: ["python3", "motion_detector.py"]  
 
 
@@ -42,8 +42,8 @@ services:
       INPUT_TOPIC: cctv.motion-detected
       OUTPUT_TOPIC: cctv.faces-detected
     volumes:
-      - ../:${DOCK_SANDBOX}  
-    working_dir: ${DOCK_SANDBOX}/cctv_surveillance
+      - ../:${DOCKER_CODE}  
+    working_dir: ${DOCKER_CODE}/cctv_surveillance
     entrypoint: ["python3", "face_detector.py"]  
 
 
@@ -57,9 +57,9 @@ services:
       FACE_DATABASE: $DOCKER_HOME/faces
       FACE_MATCH_TOL: 0.6
     volumes:
-      - ../:${DOCK_SANDBOX}  
+      - ../:${DOCKER_CODE}  
       - ${HOST_FOLDER}/known-faces:$DOCKER_HOME/faces  
-    working_dir: ${DOCK_SANDBOX}/cctv_surveillance
+    working_dir: ${DOCKER_CODE}/cctv_surveillance
     entrypoint: ["python3", "face_matcher.py"]    
 
 
@@ -71,9 +71,9 @@ services:
       INPUT_TOPIC: transactions.matched-faces
       OUTPUT_FILE_LOCATION: /tmp
     volumes:
-      - ../:${DOCK_SANDBOX}  
+      - ../:${DOCKER_CODE}  
       - ${HOST_FOLDER}/output:/tmp  
-    working_dir: ${DOCK_SANDBOX}/cctv_surveillance
+    working_dir: ${DOCKER_CODE}/cctv_surveillance
     entrypoint: ["python3", "filesystem_consumer.py"]  
     
 
