--- a/cctv_surveillance/docker-compose.yml
+++ b/cctv_surveillance/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       MOVIE_FILES_SOURCE: $DOCKER_HOME/movies
 
     volumes:
-     - ..:${DOCKER_CODE}                              # this is for testing the code before commit
+     - ..:${DOCKER_SANDBOX}                              # this is for testing the code before commit
      - ${HOST_FOLDER}/movies:$DOCKER_HOME/movies
     working_dir: ${DOCKER_CODE}/cctv_surveillance
     entrypoint: ["python3", "movie_streamer.py"]
@@ -28,7 +28,7 @@ services:
       INPUT_TOPIC: cctv.raw-frames
       OUTPUT_TOPIC: cctv.motion-detected
     volumes:
-      - ../:${DOCKER_CODE}  
+      - ../:${DOCKER_SANDBOX}  
       - ${HOST_FOLDER}/output:$DOCKER_HOME/out
     working_dir: ${DOCKER_CODE}/cctv_surveillance
     entrypoint: ["python3", "motion_detector.py"]  
@@ -42,7 +42,7 @@ services:
       INPUT_TOPIC: cctv.motion-detected
       OUTPUT_TOPIC: cctv.faces-detected
     volumes:
-      - ../:${DOCKER_CODE}  
+      - ../:${DOCKER_SANDBOX}  
     working_dir: ${DOCKER_CODE}/cctv_surveillance
     entrypoint: ["python3", "face_detector.py"]  
 
@@ -57,7 +57,7 @@ services:
       FACE_DATABASE: $DOCKER_HOME/faces
       FACE_MATCH_TOL: 0.6
     volumes:
-      - ../:${DOCKER_CODE}  
+      - ../:${DOCKER_SANDBOX}  
       - ${HOST_FOLDER}/known-faces:$DOCKER_HOME/faces  
     working_dir: ${DOCKER_CODE}/cctv_surveillance
     entrypoint: ["python3", "face_matcher.py"]    
@@ -71,7 +71,7 @@ services:
       INPUT_TOPIC: transactions.matched-faces
       OUTPUT_FILE_LOCATION: /tmp
     volumes:
-      - ../:${DOCKER_CODE}  
+      - ../:${DOCKER_SANDBOX}  
       - ${HOST_FOLDER}/output:/tmp  
     working_dir: ${DOCKER_CODE}/cctv_surveillance
     entrypoint: ["python3", "filesystem_consumer.py"]  
