--- a/docker-compose-kafka.yml
+++ b/docker-compose-kafka.yml
@@ -24,7 +24,19 @@ services:
      - /var/run/docker.sock:/var/run/docker.sock
      - ./cctv_surveillance/remove_all_topics.sh:/remove_all_topics.sh
     depends_on:
-     - zookeeper    
+     - zookeeper 
+     
+     
+  kafdrop:
+    image: obsidiandynamics/kafdrop
+    restart: "no"
+    ports:
+      - "9000:9000"
+    environment:
+      KAFKA_BROKERCONNECT: "kafka:29092"
+      JVM_OPTS: "-Xms16M -Xmx48M -Xss180K -XX:-TieredCompilation -XX:+UseStringDeduplication -noverify"
+    depends_on:
+      - "kafka"   
 
     
 networks:
