used docker-volumes inside specific host folders

--- a/cctv_surveillance/.env
+++ b/cctv_surveillance/.env
@@ -1,9 +1,9 @@
 
-DOCKER_HOME=/usr/app                # base or home directory of the container
-DOCKER_SANDBOX=/usr/app/sandbox       # dynamic code shared from host to container
-DOCKER_CHECKOUT=/usr/app/Video-Analytics
+DOCKER_HOME=/usr/app                            # base or home directory of the container
+DOCKER_SANDBOX=/usr/app/sandbox                 # dynamic code shared from host to container (for local testing)
+DOCKER_CHECKOUT=/usr/app/Video-Analytics        # location where code is cloned inside the container (for deployment)
 
 
 # !!! Modify following variable to suit your computing environment !!!
-HOST_FOLDER=/usr/VideoAnalytics
+MOVIE_FILES=/usr/VideoAnalytics/movies
 DOCKER_CODE=/usr/app/sandbox            # assign it to either DOCKER_SANDBOX or DOCKER_CHECKOUT above
