--- a/cctv_surveillance/.env
+++ b/cctv_surveillance/.env
@@ -1,9 +1,9 @@
 
-DOCKER_HOME=/usr/app                            # base or home directory of the container
-DOCKER_SANDBOX=/usr/app/sandbox                 # dynamic code shared from host to container (for local testing)
-DOCKER_CHECKOUT=/usr/app/Video-Analytics        # location where code is cloned inside the container (for deployment)
+export DOCKER_HOME=/usr/app                            # base or home directory of the container
+export DOCKER_SANDBOX=/usr/app/sandbox                 # dynamic code shared from host to container (for local testing)
+export DOCKER_CHECKOUT=/usr/app/Video-Analytics        # location where code is cloned inside the container (for deployment)
 
 
 # !!! Modify following variable to suit your computing environment !!!
-MOVIE_FILES=/usr/VideoAnalytics/movies
-DOCKER_CODE=/usr/app/sandbox            # assign it to either DOCKER_SANDBOX or DOCKER_CHECKOUT above
+export MOVIE_FILES=/usr/VideoAnalytics/movies
+export DOCKER_CODE=${DOCKER_SANDBOX}            # assign it to either DOCKER_SANDBOX or DOCKER_CHECKOUT above
