Protocol buffer with dummy compilable message

--- a/cctv_surveillance/Dockerfile
+++ b/cctv_surveillance/Dockerfile
@@ -32,9 +32,21 @@ RUN pip install -r requirements_handcrafted.txt
 # todo: merge with requirements.txt
 RUN pip install imutils    
 
+# Install Protocol buffers
+RUN PROTOC_ZIP=protoc-3.7.1-linux-x86_64.zip \
+    && curl -OL https://github.com/protocolbuffers/protobuf/releases/download/v3.7.1/$PROTOC_ZIP  \
+    && unzip -o $PROTOC_ZIP -d /usr/local bin/protoc  \
+    && unzip -o $PROTOC_ZIP -d /usr/local 'include/*' \
+    && rm -f $PROTOC_ZIP
+
+
 RUN mkdir /usr/app/temp \
     && mkdir /usr/app/out
 
 RUN git clone https://github.com/manojphatak/Video-Analytics.git Video-Analytics   \
     && cd Video-Analytics   \
     && git checkout dynamic
+
+# Run ProtoBuff compiler to generate python output
+RUN cd Video-Analytics/cctv_surveillance  \
+    && protoc --python_out=. ./kafka_message.proto
