--- a/cctv_surveillance/requirements.txt
+++ b/cctv_surveillance/requirements.txt
@@ -1,10 +1,12 @@
 astroid==2.4.2
 autopep8==1.5.3
+beautifulsoup4==4.9.1
 click==7.1.2
 dlib==19.20.99
 face-recognition==1.3.0
 face-recognition-models==0.3.0
 future-fstrings==1.2.0
+google==3.0.0
 imutils==0.5.3
 isort==4.3.21
 kafka-python==2.0.1
@@ -18,12 +20,14 @@ opencv-python==4.3.0.36
 pathtools==0.1.2
 Pillow==7.2.0
 pipe==1.6.0
+protobuf==3.13.0
 pycodestyle==2.6.0
 pylint==2.5.3
 pytube3==9.6.4
 PyYAML==5.3.1
 rope==0.17.0
 six==1.15.0
+soupsieve==2.0.1
 toml==0.10.1
 typed-ast==1.4.1
 typing-extensions==3.7.4.2
