--- a/cctv_surveillance/Dockerfile
+++ b/cctv_surveillance/Dockerfile
@@ -43,5 +43,7 @@ RUN mkdir /usr/app/temp \
 # Checkout the source code
 RUN git clone https://github.com/manojphatak/Video-Analytics.git Video-Analytics   \
     && cd Video-Analytics   \
-    && git checkout dynamic
+    && git checkout dynamic \
+    && cd cctv_surveillance \
+    && protoc --python_out=. ./kafka_message.proto
 
