making kafka logstash consumer fully functional

--- a/cctv_surveillance/conf/logstash.conf
+++ b/cctv_surveillance/conf/logstash.conf
@@ -3,7 +3,7 @@
 input {
   kafka {
     bootstrap_servers => "kafka:29092"
-    topics => "cctv.raw-frames"
+    topics => "cctv.object-detected"
     #topic_id => "cctv.raw-frames"
     key_deserializer_class => "org.apache.kafka.common.serialization.ByteArrayDeserializer"
     value_deserializer_class => "org.apache.kafka.common.serialization.ByteArrayDeserializer"
