date filter added to logstash

--- a/cctv_surveillance/conf/logstash.conf
+++ b/cctv_surveillance/conf/logstash.conf
@@ -17,7 +17,14 @@ input {
 }
 
 filter {
-   # Placehoder to add filters
+   date {
+     match => ["t_updated", "UNIX"]
+     target => "msg_updated"
+   }
+   date {
+     match => ["t_created", "UNIX"]
+     target => "msg_created"
+   }
   
 }
 
